--- a/www/bower.json
+++ b/www/bower.json
@@ -12,6 +12,7 @@
   "moduleType": [],
   "homepage": "",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.2.0"
+    "polymer": "Polymer/polymer#^1.2.0",
+    "iron-elements": "PolymerElements/iron-elements#^1.0.8"
   }
 }
