--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "recipenote",
   "description": "",
-  "repository": "https://github.com/Seoinbo/project-rnote.git",
   "version": "0.0.1",
+  "repository": "https://github.com/Seoinbo/project-rnote.git",
+  "dependencies": {
+    "angular2": "2.0.0-beta.7",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "0.5.15"
+  },
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "bower": "^1.7.7",
     "cordova": "^6.0.0",
     "cordova-lib": "^6.0.0",
+    "concurrently": "^2.0.0",
+    "lite-server": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cli": "^1.2.1",
