--- a/package.json
+++ b/package.json
@@ -12,13 +12,6 @@
     "zone.js": "0.5.15"
   },
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0",
-    "bower": "^1.7.7",
-    "cordova": "^6.0.0",
-    "cordova-lib": "^6.0.0",
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cli": "^1.2.1",
@@ -26,6 +19,12 @@
     "gulp-dest": "^0.2.3",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
-    "gulp-uglifycss": "^1.0.5"
+    "gulp-uglifycss": "^1.0.5",
+    "cordova": "^6.0.0",
+    "cordova-lib": "^6.0.0",
+    "concurrently": "^2.0.0",
+    "lite-server": "^2.1.0",
+    "typescript": "^1.7.5",
+    "typings":"^0.6.8"
   }
 }
