--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "es6-shim": "^0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "^0.19.23",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
@@ -25,6 +26,6 @@
     "concurrently": "^2.0.0",
     "lite-server": "^2.1.0",
     "typescript": "^1.7.5",
-    "typings":"^0.6.8"
+    "typings": "^0.6.8"
   }
 }
