--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ platforms
 .sass-cache
 node_modules
 www/modules
-app/*.js
-app/*.js.map
+app/**/*.js
+app/**/*.js.map
 bower_components
 npm-debug.log*
 typings
