--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.9",
+    "dexie": "^1.3.4",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "jquery": "^2.2.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "^0.19.23",
