--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.9",
+    "bounce.js": "^0.8.2",
     "dexie": "^1.3.4",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
