--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "angular2": "2.0.0-beta.9",
     "bounce.js": "^0.8.2",
     "dexie": "^1.3.4",
+    "dragula": "^3.6.8",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "jquery": "^2.2.3",
+    "ng2-dragula": "^1.1.6",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "^0.19.23",
