--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ng2-dragula": "^1.1.6",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "slipjs": "^1.4.0",
     "systemjs": "^0.19.23",
     "zone.js": "0.5.15"
   },
